# spark-assessment

./: .gitignore  README.MD  pyproject.toml  requirements.txt
spark_assessment/: bmi_calculator.py
tests/: test_spark_assessment.py
