[tool.poetry]
name = "spark-assessment"
version = "0.1.0"
description = ""
authors = ["Frelin Ampilahy <randofrils@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pyspark = "3.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
